--- a/themes/kactus/templates/index.mustache
+++ b/themes/kactus/templates/index.mustache
@@ -25,8 +25,8 @@
             </ul>
         </section>
     {{/posts}}
-    <script async="" src="//www.google-analytics.com/analytics.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/media/js/main.js"></script>
     </body>
 {{/categories}}
