Updates themes and removes gitignore from themes.

--- a/themes/phaer/templates/footer.mustache
+++ b/themes/phaer/templates/footer.mustache
@@ -9,5 +9,5 @@
 
 <footer id="footer">
     Send comments, critique and suggestions to <a href="mailto:{{email}}">{{author}}</a>.
-    Powered by <a href="https://github.com/kelvinh/org-page">org-page</a>
+    Powered by <a href="https://github.com/metacritical/AOG" target="_blank">AOG</a>
 </footer>
