--- a/themes/kactus/resources/css/style.css
+++ b/themes/kactus/resources/css/style.css
@@ -70,8 +70,8 @@ h2 {
 }
 
 .profile #wrapper {
-	padding: 100px 40px 0px;
-	max-width: 600px;
+	/* padding: 100px 40px 0px; */
+	max-width: 800px;
 	margin: 0 auto;
 }
 
@@ -109,37 +109,36 @@ h2 {
 }
 
 nav.main-nav {
-	padding: 20px 20px 0;
+	padding: 20px;
 
 	/*max-width: 600px;*/
 	/*width:100%;*/
-	background: #fff;
-	background: rgba(255,255,255,.90);
+	background: rgb(205, 59, 90);
 	margin: 0 auto;
 	text-align: right;
 	/*position: fixed;*/
 	z-index: 100;
 }
 
+/* color: #5badf0; */
+/*font-weight: bold;*/
 nav.main-nav a {
-	top: 8px;
-	right: 6px;
-	padding: 8px 12px;
-	color: #5badf0;
-	font-size: 13px;
-	/*font-weight: bold;*/
-	line-height: 1.35;
-	border-radius: 3px;
+	padding: 8px 8px;
+	color: #fff;
+	font-size: 16px;
 
 }
 nav.main-nav a.cta {
-	background: #5badf0;
-	color: #fff;
-	margin-left: 12px;
+    color:#fff;
 }
 
+nav.main-nav a.cta svg {
+    width: 20px;
+}
+
+
 #wrapper {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 60px 40px 100px 40px;
 }
@@ -165,11 +164,13 @@ a,
 #post-list li:hover .dates,
 #title:hover {
 	text-decoration: none;
-	color: #5badf0;
-	color: #5694f1;
+	/* color: #5badf0; */
+	color: rgb(205, 59, 90);
 }
 
-p a { color: #5694f1; }
+/* p a { color: #39C6C1; } */
+
+p a { color: rgb(205, 59, 90); }
 
 /*Transitions*/
 a,
@@ -182,8 +183,9 @@ a,
 	transition: all 0.15s ease;
 }
 
-ul 	{ margin:0; padding:0; }
-li	{ list-style-type:circle; list-style-position:inside; }
+ul { margin:0; padding:0; }
+/* li { list-style-type:disc; list-style-position:inside; display:list-item; } */
+li { list-style-type:disc; display:list-item; }
 
 ol li {
   list-style-type: decimal;
@@ -192,9 +194,14 @@ ol li {
 /* Line Height */
 #post-body, p { line-height:1.7; }
 
-b, strong { font-weight: 500;
-  color: #1E2025; }
-em, i { font-style: italic; }
+b, strong { font-weight: 500;}
+
+em, i { 
+    font-style: italic;
+    font-family: fantasy;
+    font-size: medium;
+    background-color: #efefef;
+}
 
 #title {
 	display: inline-block;
@@ -283,8 +290,8 @@ p.small {
 }
 
 blockquote {
-	padding-left: 15px;
-	border-left: 3px solid #eee;
+	padding-left: 30px;
+	padding-bottom: 20px;
 }
 
 hr {
@@ -296,6 +303,13 @@ hr {
 }
 
 span.code { font-family:Menlo, Monaco, Courier; background-color:#EEE; font-size:14px; }
+
+code{
+    border: 1px solid #eee;
+    background-color: #eee;
+    font-family: monospace;
+    font-weight: 600;
+}
 
 pre	{
 	font-family:Menlo, Monaco, Courier;
@@ -624,6 +638,14 @@ h2.month {
   padding: 6px 10px;
   border-radius: 4px;
   margin-left: 2px;
+}
+
+.verse {
+    font-style: oblique;
+    border-left: gray;
+    border-left-width: 2px;
+    border-style: double;
+    padding: 15px 0px 15px 30px;
 }
 
 /* Media Queries */
