--- a/themes/kactus/templates/footer.mustache
+++ b/themes/kactus/templates/footer.mustache
@@ -47,7 +47,7 @@
       {{/show-comment}}
       <script src="https://code.jquery.com/jquery-latest.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
-      <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js"></script>
       <script src="/media/js/main.js"></script>
       {{#google-analytics}}
       <script type="text/javascript">
@@ -67,7 +67,7 @@
         <p class="small">
           Copyright &copy; 2012 - <span id="footerYear"></span> <a href="mailto:{{email}}">{{author}}</a>
           &nbsp;&nbsp;-&nbsp;&nbsp;
-          Powered by <a href="https://github.com/kelvinh/org-page" target="_blank">org-page</a>
+          Powered by <a href="https://github.com/metacritical/AOG" target="_blank">AOG</a>
           <script type="text/javascript">document.getElementById("footerYear").innerHTML = (new Date()).getFullYear();</script>
         </p>
         <br />
