--- a/themes/kactus/templates/index.mustache
+++ b/themes/kactus/templates/index.mustache
@@ -6,8 +6,8 @@
                 <a href="/">
                     <img id="avatar" class="2x" src="/media/images/logo.png">
                 </a>
-                <h1>Your Names</h1>
-                <h2>Your Sub Title<h2>
+                <h1>Self dot send (Computing Blog)</h1>
+                <h2>Message passing is just a procedure call.<h2>
             </head>
         </section>
     </div>
