--- a/themes/mdo/templates/footer.mustache
+++ b/themes/mdo/templates/footer.mustache
@@ -71,7 +71,7 @@
         <p>
           Copyright &copy; 2012 - <span id="footerYear"></span> <a href="mailto:{{email}}">{{author}}</a>
           &nbsp;&nbsp;-&nbsp;&nbsp;
-          Powered by <a href="https://github.com/kelvinh/org-page" target="_blank">org-page</a>
+          Powered by <a href="https://github.com/metacritical/AOG" target="_blank">AOG</a>
           <script type="text/javascript">document.getElementById("footerYear").innerHTML = (new Date()).getFullYear();</script>
         </p>
       </div>
