--- a/themes/selfdotsend/templates/nav.mustache
+++ b/themes/selfdotsend/templates/nav.mustache
@@ -1,7 +1,7 @@
 <nav class="main-nav medium-nav">
   <div class="nav-right">
     <a href="/">Blog</a>
-    <a href="/blog/">Archive</a>
+    <a href="/archive/">Archive</a>
     <a href="/tags/">Tag</a>
     <a href="/about/">About</a>
     <a href="/nano-chat/">Nano Chat</a>
