Refactor selfdotsend header brand and add post author row

--- a/themes/selfdotsend/templates/post.mustache
+++ b/themes/selfdotsend/templates/post.mustache
@@ -1,6 +1,12 @@
 <section id="wrapper" class="post-page">
   <div class="post">
   {{#title}}<h1 class="title">{{title}}</h1>{{/title}}
+  <div class="post-author-row">
+    <img class="post-author-avatar" src="/media/images/avatar.jpg" alt="Pankaj Doharey">
+    <div class="post-author-meta">
+      <span class="post-author-name">Pankaj Doharey</span>
+    </div>
+  </div>
   {{{content}}}
   </div>
 </section>
