--- a/themes/selfdotsend/templates/post.mustache
+++ b/themes/selfdotsend/templates/post.mustache
@@ -1,12 +1,14 @@
 <section id="wrapper" class="post-page">
   <div class="post">
-  {{#title}}<h1 class="title">{{title}}</h1>{{/title}}
+  {{#title}}<h1 class="title">{{title}}</h1>
   <div class="post-author-row">
     <img class="post-author-avatar" src="/media/images/avatar.jpg" alt="Pankaj Doharey">
     <div class="post-author-meta">
       <span class="post-author-name">Pankaj Doharey</span>
+      <span class="post-author-date"></span>
     </div>
   </div>
+  {{/title}}
   {{{content}}}
   </div>
 </section>
