--- a/themes/selfdotsend/templates/post.mustache
+++ b/themes/selfdotsend/templates/post.mustache
@@ -1,6 +1,14 @@
 <section id="wrapper" class="post-page">
   <div class="post">
   {{#title}}<h1 class="title">{{title}}</h1>
+  <aside class="story-rail" aria-label="Story actions">
+    <button class="story-clap-btn" type="button" aria-label="Clap for this story">👏</button>
+    <span class="story-clap-count">0</span>
+    <div class="story-share-label">Share</div>
+    <a class="story-share-link story-share-x" href="#" target="_blank" rel="noopener" aria-label="Share on X">𝕏</a>
+    <a class="story-share-link story-share-fb" href="#" target="_blank" rel="noopener" aria-label="Share on Facebook">f</a>
+    <a class="story-share-link story-share-ln" href="#" target="_blank" rel="noopener" aria-label="Share on LinkedIn">in</a>
+  </aside>
   <div class="post-author-row">
     <img class="post-author-avatar" src="/media/images/avatar.jpg" alt="Pankaj Doharey">
     <div class="post-author-meta">
