--- a/themes/selfdotsend/resources/css/style.css
+++ b/themes/selfdotsend/resources/css/style.css
@@ -712,7 +712,7 @@ em, i {
 	display: flex;
 	align-items: center;
 	gap: 12px;
-	margin: -4px 0 22px;
+	margin: 18px 0 34px;
 }
 
 .post-author-avatar {
@@ -737,6 +737,14 @@ em, i {
 .post-author-date {
 	font: 500 13px/1.2 "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #7b7569;
+}
+
+#wrapper.post-page .post > h1.title {
+	margin-bottom: 0;
+}
+
+#wrapper.post-page .post > p:first-of-type {
+	margin-top: 14px;
 }
 
 .post {
