Set header brand to Selfdotsend and restore smaller logo size

--- a/themes/selfdotsend/templates/nav.mustache
+++ b/themes/selfdotsend/templates/nav.mustache
@@ -2,7 +2,7 @@
   <div class="nav-left site-brand">
     <a class="brand-logo-link" href="/"><img class="brand-logo" src="/media/images/logo.png" alt="Self dot send"></a>
     <div class="brand-copy">
-      <a class="brand-title" href="/">{{site-main-title}}</a>
+      <a class="brand-title" href="/">Selfdotsend</a>
       <div class="brand-tagline">{{site-sub-title}}</div>
     </div>
   </div>
