--- a/themes/selfdotsend/resources/css/theme-medium.css
+++ b/themes/selfdotsend/resources/css/theme-medium.css
@@ -42,7 +42,7 @@ html[data-theme="medium"] .brand-logo {
 
 html[data-theme="medium"] .brand-title {
   font-family: "Charter", "Iowan Old Style", "Palatino Linotype", Palatino, "Times New Roman", serif;
-  font-size: clamp(44px, 3.4vw, 62px);
+  font-size: 3.1em;
   line-height: 1;
   font-weight: 500;
   letter-spacing: -0.02em;
@@ -57,7 +57,7 @@ html[data-theme="medium"] nav.main-nav .nav-left.site-brand .brand-logo-link {
 
 html[data-theme="medium"] nav.main-nav .nav-left.site-brand .brand-title {
   font-family: "Charter", "Iowan Old Style", "Palatino Linotype", Palatino, "Times New Roman", serif;
-  font-size: clamp(44px, 3.4vw, 62px);
+  font-size: 3.1em;
   line-height: 1;
   font-weight: 500;
   letter-spacing: -0.02em;
